# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Update CloudI Service API README

2021-04-03 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_filesystem replace argument usage
      so files are sorted based on PriorityKey and Size
      to maximize the number of files loaded
    * Fix cloudi_service_filesystem replace argument lru use
    * Update supool

2021-04-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem replace argument for setting
      the cache replacement algorithm
      (when both refresh and files_size arguments are set,
       default algorithm is LFUDA)
    * Fix cloudi_service_filesystem filesystem access to ensure
      device files, named pipes and other unreadable things
      do not block a refresh
    * Fix cloudi_service_filesystem KiB unit use

2021-03-31 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_filesystem files_size argument use
      to enforce the limit before a single file's contents is read

2021-03-11 Michael Truog   <mjtruog at protonmail dot com>

    * Change the Go CloudI API support to require go module use
      (now require go >= 1.11)
    * Change the msg_size integration tests to use 1073741823 as
      the maximum request integer to be consistent with 32-bit OCaml

2021-03-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the OCaml count integration test for 32-bit architectures
    * Fix the OCaml msg_size integration test for 32-bit architectures

2021-02-26 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Erlang/OTP 24 socket inet_backend use with
      external services using protocol local

2021-02-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add runtime_erlang_compilation to the CloudI Service API
      code_status output for checking aot/jit use
    * Add Erlang/OTP 24 file:delete/2 use